added info on javascript library

--- a/chart.html
+++ b/chart.html
@@ -15,6 +15,9 @@
 	<canvas id="myChart" width="400" height="160"></canvas>
 <script>
 var ctx = document.getElementById('myChart').getContext('2d');
+
+// The 3rd party js library used here for visualising the chart is (chart.js)
+	
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
